media/editor/util.css
.scrollbar {
	position: absolute;
	visibility: hidden;
	overflow: scroll;
	width: 100px;
	height: 100px;
}

/* Decorators */

.diff-insert {
	background-color: rgba(156, 204, 44, 0.4);
	filter: opacity(100%);
}

.diff-delete {
	background-color: rgba(255, 0, 0, 0.4);
}

.diff-empty {
	background-image: linear-gradient(
		-45deg,
		var(--vscode-diffEditor-diagonalFill) 12.5%,
		#0000 12.5%,
		#0000 50%,
		var(--vscode-diffEditor-diagonalFill) 50%,
		var(--vscode-diffEditor-diagonalFill) 62.5%,
		#0000 62.5%,
		#0000 100%
	);
	background-size: 8px 8px;
	color: transparent !important;
}

